[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "twin-memory"
version = "2.0.0"
description = "Twin AI Memory System - Document-Driven Soul"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Kimi Claw", email = "kimi@twin.ai"}
]
keywords = ["memory", "ai", "twin", "git", "markdown"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
]

[project.urls]
Homepage = "https://github.com/Nick-Tsai/twin-memory"
Documentation = "https://github.com/Nick-Tsai/twin-memory#readme"
Repository = "https://github.com/Nick-Tsai/twin-memory.git"
Issues = "https://github.com/Nick-Tsai/twin-memory/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"memory_system" = ["templates/*.md"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
